# KingdomEngine

./: .gitignore  BuildSolution.bat  BuildWindows.bat  CMakeLists.txt  Kingdom Engine.lnk  KingdomEngine.sln  README.md  Run.bat  RunWindows.bat  VS2022.bat  extract_ke_identifiers.py  premake5.lua
KingdomEditor/: CMakeLists.txt  KingdomEditor.vcxproj.filters  imgui.ini
KingdomEditor/include/KingdomEditor/: EditorApplication.h  Project.h  ProjectManager.h
KingdomEditor/include/KingdomEditor/DialogBox/: BuildErrorDialogBox.h  ExcludeProjectDialogBox.h  SaveProjectDialogBox.h
KingdomEditor/include/KingdomEditor/EditorInterface/: EditorInterface.h  EditorInterfaceManager.h
KingdomEditor/include/KingdomEditor/ImWindows/: BuildProgressBar.h  CodeEditorWindow.h  ConfigWindow.h  ConsoleWindow.h  ContentBrowserWindow.h  DetailsPanelWindow.h  GameObjectsWindow.h  LogsWindow.h  ProjectConfigWindow.h  ProjectsWindow.h  ViewportWindow.h
KingdomEditor/include/KingdomEditor/Project/: Project.h  ProjectBuild.h  ProjectManager.h
KingdomEditor/include/KingdomEditor/Utils/: FileGenerator.h  GLVersionCombo.h  Globals.h
KingdomEditor/resource/shaders/: default.frag  default.vert
KingdomEditor/src/: Camera.cpp  Camera.h  EditorApplication.cpp  MainWindows.cpp  Project.cpp  ProjectManager.cpp
KingdomEditor/src/EditorInterface/: EditorInterface.cpp  EditorInterfaceManager.cpp
KingdomEditor/src/EditorInterface/UI/: Config.cpp  Console.cpp  ContentBrowser.cpp  DetailsPanel.cpp  GameObjects.cpp  Logs.cpp
KingdomEditor/src/ImMenus/: FileMenu.cpp  RunMenu.cpp
KingdomEditor/src/ImWindows/: BuildProgressBar.cpp  ConfigWindow.cpp  ConsoleWindow.cpp  ContentBrowserWindow.cpp  DetailsPanelWindow.cpp  GameObjectsWindow.cpp  LogsWindow.cpp  ProjectConfigWindow.cpp  ProjectsWindow.cpp  ViewportWindow.cpp
KingdomEditor/src/Project/: Project.cpp  ProjectBuild.cpp  ProjectManager.cpp
KingdomEditor/src/Windows/: Config.cpp  Console.cpp  ContentBrowser.cpp  DetailsPanel.cpp  GameObjects.cpp  Logs.cpp
KingdomEngine/: CMakeLists.txt
KingdomEngine/include/KIngdomEngine/: KingdomEngine.h
KingdomEngine/include/KIngdomEngine/Core/: Application.h  EntryPoint.h  Event.h
KingdomEngine/include/KIngdomEngine/Platform/Windows/: Window.h
KingdomEngine/include/KingdomEngine/: KingdomEngine.h
KingdomEngine/include/KingdomEngine/Core/: Application.h  Color.h  Core.h  Dictionary.h  EntryPoint.h  Event.h  Font.h  FontManager.h  JSON.h  Layer.h  LayerStack.h  Log.h  Window.h
KingdomEngine/include/KingdomEngine/Core/GameLoader/: Game.h  GameLoader.h
KingdomEngine/include/KingdomEngine/Core/IO/: Directory.h  File.h  IOUtils.h  OS.h
KingdomEngine/include/KingdomEngine/Events/: ApplicationEvent.h  Event.h  ImGuiEvent.h
KingdomEngine/include/KingdomEngine/GUI/: ImGuiLayer.h
KingdomEngine/include/KingdomEngine/ImGui/: ImDialogBox.h  ImGuiManager.h  ImGuiTheme.h  ImMenu.h  ImMenuManager.h  ImWindow.h  ImWindowManager.h
KingdomEngine/include/KingdomEngine/Platform/Windows/: Window.h
KingdomEngine/include/KingdomEngine/Renderer/: Renderer.h
KingdomEngine/include/KingdomEngine/Renderer/OpenGL/: Camera.h  EBO.h  Framebuffer.h  GLContext.h  Mesh.h  OpenGLContext.h  Shader.h  Sprite.h  Texture.h  VAO.h  VBO.h  Vertex.h
KingdomEngine/src/: resource.aps
KingdomEngine/src/Core/: Application.cpp  Color.cpp  Dictionary.cpp  EntryPoint.cpp  Event.cpp  Font.cpp  FontManager.cpp  JSON.cpp  LayerStack.cpp  Log.cpp  Window.cpp
KingdomEngine/src/Core/GameLoader/: GameLoader.cpp
KingdomEngine/src/Core/IO/: Directory.cpp  File.cpp  IOUtils.cpp  OS.cpp
KingdomEngine/src/GUI/: ImGuiLayer.cpp
KingdomEngine/src/ImGui/: ImDialogBox.cpp  ImGuiManager.cpp  ImGuiTheme.cpp  ImMenu.cpp  ImMenuManager.cpp  ImWindow.cpp  ImWindowManager.cpp
KingdomEngine/src/Platform/Windows/: Window.cpp
KingdomEngine/src/Renderer/: Renderer.cpp
KingdomEngine/src/Renderer/OpenGL/: Camera.cpp  EBO.cpp  Framebuffer.cpp  GLContext.cpp  Mesh.cpp  OpenGLContext.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VAO.cpp  VBO.cpp
Projects/: script.py
resources/: ke_identifiers.json
resources/shaders/gl2/: sprite.frag  sprite.vert
